--- a/package.json
+++ b/package.json
@@ -15,5 +15,7 @@
   "bugs": {
     "url": "https://github.com/12PUFFS/frontend-project-44/issues"
   },
-  "homepage": "https://github.com/12PUFFS/frontend-project-44#readme"
+  "homepage": "https://github.com/12PUFFS/frontend-project-44#readme",
+  "type": "module"
+  
 }
