--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "url": "https://github.com/12PUFFS/frontend-project-44/issues"
   },
   "homepage": "https://github.com/12PUFFS/frontend-project-44#readme",
-  "type": "module"
-  
+  "type": "module",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
