--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "@eslint/js": "^9.23.0",
     "eslint": "^9.23.0",
     "globals": "^16.0.0"
+  },
+  "bin":{
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   }
 }
