--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "globals": "^16.0.0"
   },
   "bin":{
-    "brain-games": "bin/brain-games.js",
-    "brain-even": "bin/brain-even.js"
+    "brain-games": "./bin/brain-games.js",
+    "brain-even": "./bin/brain-even.js"
   }
 }
