--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "eslint": "^9.23.0",
     "globals": "^16.0.0"
   },
-  "bin":{
-    "brain-games": "./bin/brain-games.js",
-    "brain-even": "./bin/brain-even.js"
+  "bin": {
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "bin/brain-calc.js"
   }
 }
