--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "brain-even": "bin/brain-even.js",
     "brain-calc": "bin/brain-calc.js",
     "brain-gcd": "bin/brain-gcd.js",
-    "brain-progressive": "bin/brain-progressive.js"
+    "brain-progression": "bin/brain-progression.js"
   }
 }
