--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.23.0",
     "eslint": "^9.23.0",
     "globals": "^16.0.0"
