--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.23.0",
     "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.5",
     "globals": "^16.0.0"
   },
   "bin": {
