--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@eslint/js": "^9.23.0",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.5",
     "globals": "^16.0.0"
   },
